--- a/src/pages/jobs/[slug].astro
+++ b/src/pages/jobs/[slug].astro
@@ -83,6 +83,77 @@ const pageUrl = `https://taxi-mate.jp/jobs/${slug}/`;
       <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
         {job.jobName || job.company}
       </h1>
+      <div class="mt-8 flex items-center gap-x-8">
+        <div class="relative flex items-center gap-x-4">
+          <div
+            class="size-10 rounded-full bg-gray-50 flex items-center justify-center"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6 text-gray-600"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"></path>
+            </svg>
+          </div>
+          <div class="text-sm/6">
+            <p class="font-semibold text-gray-900">作成日時</p>
+            <p class="text-gray-600">
+              {
+                new Date(job.created_time).toLocaleString('ja-JP', {
+                  year: 'numeric',
+                  month: '2-digit',
+                  day: '2-digit',
+                  hour: '2-digit',
+                  minute: '2-digit',
+                  hour12: false,
+                })
+              }
+            </p>
+          </div>
+        </div>
+        <div class="relative flex items-center gap-x-4">
+          <div
+            class="size-10 rounded-full bg-gray-50 flex items-center justify-center"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6 text-gray-600"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0 3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 8.25 0 0 1 13.803-3.7l3.181 3.182m0-4.991v4.99"
+              ></path>
+            </svg>
+          </div>
+          <div class="text-sm/6">
+            <p class="font-semibold text-gray-900">最終更新日時</p>
+            <p class="text-gray-600">
+              {
+                new Date(job.last_edited_time).toLocaleString('ja-JP', {
+                  year: 'numeric',
+                  month: '2-digit',
+                  day: '2-digit',
+                  hour: '2-digit',
+                  minute: '2-digit',
+                  hour12: false,
+                })
+              }
+            </p>
+          </div>
+        </div>
+      </div>
       <div
         class="mt-12 lg:grid lg:grid-cols-12 lg:items-start lg:gap-x-12 xl:gap-x-16"
       >
