求人一覧にも作成日時を追加

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -397,7 +397,6 @@ const jobs = await getLatestJobsFromNotion();
                     ))}
                   </div>
                 )}
-                <span class="mr-8">{job.location}</span>
               </div>
               <h3 class="mt-3 text-lg/6 font-semibold text-white">
                 <a href={`/jobs/${job.id}/`}>
@@ -405,6 +404,22 @@ const jobs = await getLatestJobsFromNotion();
                   {job.title}
                 </a>
               </h3>
+              <span class="mt-2 text-sm/6 text-gray-300 whitespace-pre-line">
+                {job.location}
+              </span>
+              <span class="mt-1 text-xs/6 text-gray-400">
+                作成日時：
+                {new Date(job.created_time)
+                  .toLocaleString('ja-JP', {
+                    year: 'numeric',
+                    month: '2-digit',
+                    day: '2-digit',
+                    hour: '2-digit',
+                    minute: '2-digit',
+                    hour12: false,
+                  })
+                  .replace(/\//g, '/')}
+              </span>
             </article>
           ))
         }
