--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,6 +6,7 @@ import { Image } from 'astro:assets';
 import favicon from '../assets/images/favicon.ico';
 import ogImage from '../assets/images/ogimage.png';
 import SpeedInsights from '@vercel/speed-insights/astro';
+import Analytics from '@vercel/analytics/astro';
 
 export interface Props {
   title?: string;
@@ -90,5 +91,6 @@ const {
     </main>
     <Footer />
     <SpeedInsights />
+    <Analytics />
   </body>
 </html>
