--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,7 +17,7 @@ export interface Props {
 const {
   title = 'タクシーメイト',
   description = 'タクシーメイトはタクシー業界専門の転職支援サービスです。厳選した月給45万円以上が目指せる会社のみを紹介。タクシー業界を知り尽くしたキャリアアドバイザーがあなたの転職をサポートします。',
-  url = 'https://taxi-mate.jp/',
+  url = new URL(Astro.url.pathname, Astro.site).href,
 } = Astro.props;
 ---
 
