トップページのURLをありに統一

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import whyUs2 from '../assets/images/why-us2.jpg';
 import whyUs3 from '../assets/images/why-us3.jpg';
 import bannerSquare from '../assets/images/banner-square.png';
 
-const pageUrl = 'https://taxi-mate.jp';
+const pageUrl = 'https://taxi-mate.jp/';
 const pageTitle = 'タクシーメイト';
 const pageDescription =
   'タクシーメイトはタクシー業界専門の転職支援サービスです。厳選した月給45万円以上が目指せる会社のみを紹介。タクシー業界を知り尽くしたキャリアアドバイザーがあなたの転職をサポートします。';
